# neural_network_numpy

./: README.md  pyproject.toml  test.py  test_catvnoncat.py  test_mnist.py
datasets/mnist/: loader.py
src/: nn.py  utils.py
