[tool.poetry]
name = "neural_network_numpy"
version = "0.1.0"
description = ""
authors = ["Alessio  <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.0"
h5py = "^3.3.0"
ipython = "^7.25.0"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
